--- a/index.html
+++ b/index.html
@@ -22,15 +22,28 @@
 <h1>Our Products</h1>
 
 <table>
-  <thead>
     <tr>
-      <th>Product Name</th>
-      <th>Category</th>
-      <th>Price</th>
-      <th>Availability</th>
+      <th><tr>
+        <th><img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /></th>
+        <th>Nike Revolution 7 Zapatillas para Mujer</th>
+        <th>$1,660</th>
+      </tr></th>
+            <th><tr>
+        <th><img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /></th>
+        <th>Nike Revolution 7 Zapatillas para Mujer</th>
+        <th>$1,660</th>
+      </tr></th>
+            <th><tr>
+        <th><img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /></th>
+        <th>Nike Revolution 7 Zapatillas para Mujer</th>
+        <th>$1,660</th>
+      </tr></th>
+            <th><tr>
+        <th><img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /></th>
+        <th>Nike Revolution 7 Zapatillas para Mujer</th>
+        <th>$1,660</th>
+      </tr></th>
     </tr>
-  </thead>
-  <tbody>
     <tr>
       <td>Laptop X1</td>
       <td>Electronics</td>
@@ -55,7 +68,6 @@
       <td>$350</td>
       <td>Out of Stock</td>
     </tr>
-  </tbody>
 </table>
 
 </body>
