--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <table>
     <tr>
       <th>
-        <th><img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /></th>
-        <th>Nike Revolution 7 Zapatillas para Mujer</th>
-        <th>$1,660</th>
+        <tr><img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /></tr>
+        <tr>Nike Revolution 7 Zapatillas para Mujer</tr>
+        <tr>$1,660</tr>
       </th>
     </tr>
 </table>
