--- a/index.html
+++ b/index.html
@@ -2,20 +2,6 @@
 <html>
 <head>
 <title>Product List</title>
-<style>
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  th, td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: left;
-  }
-  th {
-    background-color: #f2f2f2;
-  }
-</style>
 </head>
 <body>
 
@@ -24,7 +10,12 @@
 <table>
     <tr>
       <th>
-          <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /><br>
+         <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /><br>
+         Nike Revolution 7 Zapatillas para Mujer<br>
+        $1,660
+      </th>
+         <th>
+         <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /><br>
          Nike Revolution 7 Zapatillas para Mujer<br>
         $1,660
       </th>
