--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 </head>
 <body>
 
-<h1>Our Products</h1>
+<h1>Productos</h1>
 
 <table>
     <tr>
       <th>
          <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /><br>
-         Nike Revolution 7 Zapatillas para Mujer<br>
-        $1,660
+         <h2>Nike Revolution 7 Zapatillas para Mujer</h2><br>
+        <h3>$1,660</h3>
       </th>
-         <th>
+      <th>
          <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /><br>
          Nike Revolution 7 Zapatillas para Mujer<br>
         $1,660
