--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <tr>
       <th>
          <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /><br>
-         <h2>Nike Revolution 7 Zapatillas para Mujer</h2><br>
-        <h3>$1,660</h3>
+         <font size="25">Nike Revolution 7 Zapatillas para Mujer</font><br>
+        <font size="15">$1,660
       </th>
       <th>
          <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" /><br>
