--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <table>
     <tr>
       <th>
-         <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" width="300" height="150"  /><br>
+         <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" width="600" height="150"  /><br>
          <font size="5">Nike Revolution </font><br>
-        <font size="3">$1,660
+        <font size="3">$1,660</font>
       </th>
       <th>
          <img src="https://i.ibb.co/YFXs6w3D/411-Fy-KQqn-SL-AC-SY695.jpg" width="300" height="150" /><br>
