--- a/index.html
+++ b/index.html
@@ -4,23 +4,35 @@
 <title>Product List</title>
 </head>
 <body>
+Menú en formato texto con font
 
-<h1>Productos</h1>
+</font><br><br>
 
-<table>
-    <tr>
-      <th>
-         <img src="https://i.ibb.co/Cs9PzmQ2/71cy1db-Mh5-L-AC-SX695.jpg" width="300" height="150"  /><br>
-         <font size="5">Nike Revolution </font><br>
-        <font size="3">$1,660</font>
-      </th>
-      <th>
-         <img src="https://i.ibb.co/YFXs6w3D/411-Fy-KQqn-SL-AC-SY695.jpg" width="300" height="150" /><br>
-         <font size="5">Adidas Herren VL Court</font><br>
-        <font size="3">$2,660</font>
-      </th>
-    </tr>
-</table>
+<nav class="menu">
+
+<ul>
+
+<li><a href="#">
+
+<font size="6" color="#0f6a9d" face="Comics Sans CM">
+
+Inicio</font></a></li>
+
+<li><a href="#"><font size="6" color="#1f6dfd" face="Comics Sans CM">
+
+Pagina 1</font></a></li>
+
+<li><a href="#"><font size="6" color="#df619d" face="Comics Sans CM">
+
+Pagina 2</font></a></li>
+
+<li><a href="#"><font size="6" color="#49029d" face="Comics Sans CM">
+
+Pagina 3</font></a></li>
+
+</ul>
+
+</nav>
 
 </body>
 </html>
