--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <title>Product List</title>
 </head>
 <body>
+<body bgcolor="#cddf89">
+
+<font size="6" color="#df7644" face="Tahoma">
+
 Menú en formato texto con font
 
 </font><br><br>
@@ -33,6 +37,5 @@ Pagina 3</font></a></li>
 </ul>
 
 </nav>
-
 </body>
 </html>
