--- a/index.html
+++ b/index.html
@@ -5,37 +5,43 @@
 </head>
 <body>
 <body bgcolor="#cddf89">
+  .nv1 {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  text-align: center;
+  margin: auto;
+}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">SITIOWEB</a>
+      <a class="navbar-brand nv1" href="#">LOGO</a>
+    </div>
 
-<font size="6" color="#df7644" face="Tahoma">
+    <div class="collapse navbar-collapse" id="myNavbar">
 
-Menú en formato texto con font
-
-</font><br><br>
-
-<nav class="menu">
-
-<ul>
-
-<li><a href="#">
-
-<font size="6" color="#0f6a9d" face="Comics Sans CM">
-
-Inicio</font></a></li>
-
-<li><a href="#"><font size="6" color="#1f6dfd" face="Comics Sans CM">
-
-Pagina 1</font></a></li>
-
-<li><a href="#"><font size="6" color="#df619d" face="Comics Sans CM">
-
-Pagina 2</font></a></li>
-
-<li><a href="#"><font size="6" color="#49029d" face="Comics Sans CM">
-
-Pagina 3</font></a></li>
-
-</ul>
-
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span></span> Opcion 1</a></li>
+        <li><a href="#"><span></span> Opcion 2</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
+
+<div class="container">
+  <h3>Collapsible Navbar</h3>
+  <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try to re-size this window).
+    <p>Only when the button is clicked, the navigation bar will be displayed.</p>
+</div>
 </body>
 </html>
