--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">SITIOWEB</a>
-      <a class="navbar-brand nv1" href="#">LOGO</a>
+      <a class="navbar-brand" href="#">Home</a>
+      <a class="navbar-brand nv1" href="#">Productos</a>
+      <a class="navbar-brand nv1" href="#">Contacto</a>
     </div>
   </div>
 </nav>
