--- a/index.html
+++ b/index.html
@@ -17,4 +17,9 @@
   </div>
 </nav>
 </body>
+ <footer>
+    <small>
+      Copyright © 2023 Football History Archives. All Rights Reserved.
+    </small>
+  </footer>
 </html>
