--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Product List</title>
+ <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -16,6 +17,13 @@
     </div>
   </div>
 </nav>
+
+ <div id="page-container">
+   <div id="content-wrap">
+     <!-- todo el contenido de pagina -->
+   </div>
+   <footer id="footer"></footer>
+ </div>
 </body>
 
 </html>
