--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
  <div id="page-container">
    <div id="content-wrap">
-     <!-- todo el contenido de pagina -->
+        <small>
+      Copyright © 2023 Football History Archives. All Rights Reserved.
+    </small>
    </div>
    <footer id="footer"></footer>
  </div>
